--- a/nsjson/nsjson.csproj
+++ b/nsjson/nsjson.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="CliWrap" Version="3.5.0" />
+    <PackageReference Version="3.5.0" />
   </ItemGroup>
 
 </Project>
